POST method added to send data to server