@@ -1,13 +1,23 @@
 package com.github.yablonski.majordom.source;
 
 import android.content.Context;
+import android.net.Uri;
+import android.text.TextUtils;
+import android.util.Log;
 
+import com.github.yablonski.majordom.Api;
 import com.github.yablonski.majordom.CoreApplication;
 
+import java.io.BufferedWriter;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.OutputStreamWriter;
+import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.nio.charset.Charset;
 
 /**
  * Created by Acer on 25.11.2014.
@@ -15,6 +25,7 @@ import java.net.URL;
 public class HttpDataSource implements DataSource<InputStream, String> {
 
     public static final String KEY = "HttpDataSource";
+    public static final String TAG = "HttpDS";
 
     public static HttpDataSource get(Context context) {
         return CoreApplication.get(context, KEY);
@@ -22,10 +33,40 @@ public class HttpDataSource implements DataSource<InputStream, String> {
 
     @Override
     public InputStream getResult(String p) throws Exception {
-        //download data and return
-        URL url = new URL(p);
-        // Read all the text returned by the server
-        return url.openStream();
+        //Log.d(TAG, "url " + p);
+        URI uri = new URI(p);
+        Uri parsedFragment = Uri.parse(p);
+        String message = parsedFragment.getQueryParameter("message");
+        String params = uri.getQuery();
+//        Log.d(TAG, "query " + params);
+//        Log.d(TAG, "message " + message);
+        if (!TextUtils.isEmpty(message)) {
+//        Log.d(TAG, "url post " + uri);
+            byte[] postData = params.getBytes(Charset.forName("UTF-8"));
+            int postDataLength = postData.length;
+            URL url = new URL(Api.REPORTS_GET);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setConnectTimeout(15000);
+            connection.setDoOutput(true);
+            connection.setDoInput(true);
+            connection.setRequestMethod("POST");
+            connection.setRequestProperty("Content-Type", "application/x-www-form-urlencoded");
+            connection.setRequestProperty("charset", "utf-8");
+            connection.setRequestProperty("Content-Length", Integer.toString(postDataLength));
+            OutputStream openStream = connection.getOutputStream();
+            BufferedWriter writer = new BufferedWriter(
+                    new OutputStreamWriter(openStream, "UTF-8"));
+            writer.write(params);
+            writer.flush();
+            writer.close();
+            openStream.close();
+            connection.connect();
+            Log.d(TAG, "url " + url);
+            return connection.getInputStream();
+        } else {
+            URL url = new URL(p);
+            return url.openStream();
+        }
     }
 
     public static void close(Closeable in) {
